@@ -3,6 +3,8 @@ http://nukeviet.vn
 
 NUKEVIET 4.3.06
 
+- Display the child sitemap at the "sitemapindex"
+- Add the function to debug SQL statements
 - Add an optional configuration to insert a logo with each post
 - Use ReCaptcha to confirm if Flood blocked
 - Block external requests into the admin area
